# ass-rs

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  docker-compose.yml  test_manual.rs  test_runner.sh
crates/ass-benchmarks/: Cargo.toml
crates/ass-benchmarks/assets/: all_cases.ass
crates/ass-benchmarks/benches/: comparison_benchmarks.rs
crates/ass-cli/: Cargo.toml
crates/ass-cli/src/: main.rs
crates/ass-cli/tests/: cli_tests.rs
crates/ass-core/: Cargo.toml  README.md  integration_tests.rs  lib.rs  version.rs
crates/ass-core/analysis/: analysis_tests.rs  construction.rs  events.rs  mod.rs  queries.rs  styles.rs
crates/ass-core/analysis/events/: dialogue_info.rs  line_breaks.rs  mod.rs  overlap.rs  scoring.rs  tags.rs  text_analysis.rs  unicode_wrap.rs  utils.rs
crates/ass-core/analysis/linting/: category.rs  config.rs  config_tests.rs  issue.rs  issue_tests.rs  mod.rs  rule.rs  rules.rs  runner.rs  runner_tests.rs  severity.rs
crates/ass-core/analysis/styles/: analyzer.rs  mod.rs  resolved_style.rs  validation.rs
crates/ass-core/benches/: incremental_benchmarks.rs  memory_benchmarks.rs  parse.rs  parser_benchmarks.rs
crates/ass-core/benches/incremental_benchmarks/: editing.rs  helpers.rs  large_scale.rs  parsing.rs  real_world.rs  simulations.rs
crates/ass-core/benches/parser_benchmarks/: analysis.rs  memory.rs  parsing.rs  styles.rs
crates/ass-core/examples/: custom_section.rs  custom_tag.rs
crates/ass-core/parser/: ast.rs  binary_data.rs  errors.rs  incremental.rs  main.rs  mod.rs  position_tracker.rs  script.rs  streaming.rs
crates/ass-core/parser/ast/: event.rs  media.rs  mod.rs  script_info.rs  section.rs  span.rs  span_tests.rs  style.rs
crates/ass-core/parser/binary_data/: binary_parser.rs  fonts_edge_tests.rs  fonts_tests.rs  graphics_edge_tests.rs  graphics_tests.rs  mod.rs  section_parsers.rs
crates/ass-core/parser/errors/: mod.rs  parse_error.rs  parse_issue.rs  parse_result.rs
crates/ass-core/parser/incremental/: line_calc.rs  mod.rs  range_adjust.rs  section_bounds.rs  tests.rs
crates/ass-core/parser/main/: helpers.rs  mod.rs  (+8 more)
crates/ass-core/plugin/: error.rs  mod.rs  registry.rs  tests.rs  traits.rs
crates/ass-core/src/: builtins.rs  lib.rs  override_parser.rs  plugin.rs  script.rs  tokenizer.rs  wasm.rs
crates/ass-core/tests/: additional_coverage_tests.rs  advanced_tests.rs  benchmark_utils_tests.rs  builtins_tests.rs  events_parser_edge_cases.rs  incremental_parsing.rs  integration.rs  parser.rs  parser_edge_cases.rs  parser_main_coverage.rs  parser_main_edge_paths.rs  plugin_tests.rs  roundtrip.rs  serde_export.rs  spec_coverage.rs  styles_parser_edge_cases.rs  test_incremental_debug.rs  tokenizer_coverage_tests.rs  tokenizer_edge_cases.rs  tokenizer_edge_paths.rs  utils_comprehensive_coverage.rs  utils_edge_cases.rs  utils_targeted_coverage.rs  v4plusplus_spec.rs
crates/ass-core/tokenizer/: ass_tokenizer.rs  inline1_tests.rs  inline2_tests.rs  inline3_tests.rs  inline4_tests.rs  inline5_tests.rs  inline6_tests.rs  mod.rs  next_token.rs  scanner.rs  simd.rs  state.rs  tests.rs  tokens.rs
crates/ass-core/utils/: benchmark_generators.rs  color.rs  color_tests.rs  errors.rs  fields.rs  fields_tests.rs  hashers.rs  math.rs  math_tests.rs  mod.rs  spans.rs  spans_tests.rs  tests.rs  time.rs  time_tests.rs  utf8.rs  uu.rs  uu_tests.rs
crates/ass-editor/: Cargo.toml  README.md  lib.rs
crates/ass-editor/benches/: editor_commands.rs  incremental_parsing.rs  memory_performance.rs  search_performance.rs
crates/ass-editor/commands/: batch_command.rs  command_result.rs  command_trait.rs  commands_tests.rs  delta_commands.rs  event_commands.rs  fluent_builder.rs  fonts_graphics_commands.rs  karaoke_commands.rs  macros.rs  mod.rs  script_info_commands.rs  style_commands.rs  tag_commands.rs  text_commands.rs
crates/ass-editor/core/: builders.rs  document.rs  errors.rs  fluent.rs  history.rs  incremental.rs  mod.rs  position.rs  thread_safety.rs
crates/ass-editor/events/: channel.rs  channel_tests.rs  dispatch.rs  event.rs  event_builders.rs  event_query.rs  event_tests.rs  filter.rs  handler.rs  mod.rs  registry.rs
crates/ass-editor/examples/: ass_aware_demo.rs
crates/ass-editor/extensions/: command.rs  context.rs  extension.rs  extensions_tests.rs  info.rs  manager.rs  manager_access.rs  manager_lifecycle.rs  manager_loading.rs  manager_tests.rs  mod.rs  mod_backup.rs  registry_integration.rs
crates/ass-editor/formats/: formats_tests.rs  mod.rs  registry.rs  traits.rs  types.rs
crates/ass-editor/sessions/: access.rs  config.rs  lifecycle.rs  manager.rs  manager_tests.rs  memory.rs  mod.rs  session.rs
crates/ass-editor/tests/: ass_format_edge_cases_test.rs  edge_cases_test.rs  error_recovery_test.rs  event_query_api_demo.rs  fluent_api_test.rs  integration_test.rs  performance_edge_cases_test.rs  performance_targets_test.rs  property_tests.rs  stress_tests.rs
crates/ass-editor/utils/: formats.rs  indexing.rs  mod.rs  search.rs  validator.rs
crates/ass-io/: Cargo.toml
crates/ass-io/src/: lib.rs
crates/ass-render/: Cargo.toml
crates/ass-render/benches/: hardware_bench.rs  render_bench.rs
crates/ass-render/src/: hardware.rs  lib.rs  model.rs  software.rs  text_shaping.rs
crates/ass-render/tests/: integration_test.rs  render_tests.rs
crates/ass-renderer/: Cargo.toml  README.md  build.rs
crates/ass-renderer/benches/: animated.ass  realistic.ass  render_benchmarks.rs  simple.ass
crates/ass-renderer/examples/: gpu_compare.rs  gpu_playback.rs  gpu_probe.rs  gpu_window.rs  libass_bench.rs  libass_compare.rs  libass_ffi_compare.rs  parity_sweep.rs  render_video.rs  render_video_libass.rs
crates/ass-renderer/src/: animation.rs  collision.rs  lib.rs
crates/ass-renderer/tests/: README.md  bitmap_list_equivalence.rs  compatibility_tests.rs  event_selection_equivalence.rs  simple_compatibility_test.rs  software_render.rs
crates/ass-wasm/: Cargo.toml
crates/ass-wasm/src/: lib.rs
crates/ass-wasm/tests/: wasm_tests.rs
(+939 files in other folders)
