[package]
name = "ass-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ass-core = { path = "../ass-core" }
ass-render = { path = "../ass-render" }
image = { version = "0.24", default-features = false, features = ["png", "rayon"] }
anyhow = "1"
rayon = "1"
ass-io = { path = "../ass-io" }

[dev-dependencies]
tempfile = "3.0"