[package]
name = "ass-render"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["std", "software"]
std = []
software = ["fontdue"]
hardware = ["wgpu", "bytemuck", "glam", "futures-intrusive", "fontdue", "rustybuzz", "ttf-parser"]

[dependencies]
ass-core = { path = "../ass-core", default-features = false, features = ["std"] }
fontdue = { version = "0.7", optional = true }
wgpu = { version = "0.20", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
glam = { version = "0.24", optional = true }
pollster = { version = "0.3", optional = true }
futures-intrusive = { version = "0.5", optional = true }
rustybuzz = { version = "0.11", optional = true }
ttf-parser = { version = "0.19", optional = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { version = "1.0", features = ["rt", "macros"] }

[lib]
bench = false

[[bench]]
name = "render_bench"
path = "benches/render_bench.rs"
harness = false

[[bench]]
name = "hardware_bench"
path = "benches/hardware_bench.rs"
harness = false
required-features = ["hardware"]